--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,11 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 #spring.sql.init.mode=always
 spring.sql.init.schema-locations=classpath:table.sql
+
+
+#TODO setting refactor
+# ??????????? ? ????????? ????
+logging.structured.format.file=ecs
+logging.file.name=log.json
+#logging.level.org.springframework = ERROR
+logging.level.com.example.shop.service = ERROR
