--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,5 @@ logging.structured.format.file=ecs
 logging.file.name=log.json
 #logging.level.org.springframework = ERROR
 logging.level.com.example.shop.service = ERROR
+
+#spring.main.web-application-type=none
